added a simpler counter with signals

--- a/src/app/components/signaltest/signaltest.component.html
+++ b/src/app/components/signaltest/signaltest.component.html
@@ -1,1 +1,4 @@
-<p>signaltest works!</p>
+<div id="background">
+    <span id="number">{{ count() }}</span>
+    <button id="btn" (click)="calculate()">calculate</button>
+</div>
