added reset function

--- a/src/app/components/signaltest/signaltest.component.html
+++ b/src/app/components/signaltest/signaltest.component.html
@@ -1,4 +1,5 @@
 <div id="background">
     <span id="number">{{ count() }}</span>
-    <button id="btn" (click)="calculate()">calculate</button>
+    <button class="btn" (click)="calculate()">calculate</button>
+    <button class="btn" (click)="reset()">reset</button>
 </div>
