--- a/src/app/components/signaltest/signaltest.component.scss
+++ b/src/app/components/signaltest/signaltest.component.scss
@@ -1,19 +1,32 @@
 #background {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    background-color: #F4064C;
-    width: 100vw;
-    height: 100vh;
-    margin: 0 auto;
-    overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-color: #F4064C;
+  width: 100vw;
+  height: 100vh;
+  margin: 0 auto;
+  overflow-x: hidden;
 }
 
-#number {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: white;
+.descriptionText {
+  font-size: 2rem;
+  font-weight: bold;
+  color: whitesmoke;
+}
+
+.number {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: white;
+}
+
+.numberContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 250px;
 }
 
 .btn {
