added effect method The effect method in the constructor is triggered when the value of constructorCount is changed via .update or .set

--- a/src/app/components/signaltest/signaltest.component.html
+++ b/src/app/components/signaltest/signaltest.component.html
@@ -13,4 +13,5 @@
   </div>
   <button class="btn" (click)="calculate()" (mouseover)="calculateOnHover()">calculate</button>
   <button class="btn" (click)="reset()">reset</button>
+  <button class="btn" (click)="info()">info</button>
 </div>
