--- a/src/app/components/signaltest/signaltest.component.html
+++ b/src/app/components/signaltest/signaltest.component.html
@@ -1,4 +1,7 @@
 <div id="background">
+  <div id="titleContainer">
+    <h2>ANGULAR SIGNAL TEST</h2>
+  </div>
   <div class="numberContainer">
     <span class="descriptionText">on click count:</span>
     <span class="number">{{ count() }}</span>
@@ -13,5 +16,5 @@
   </div>
   <button class="btn" (click)="calculate()" (mouseover)="calculateOnHover()">calculate</button>
   <button class="btn" (click)="reset()">reset</button>
-  <button class="btn" (click)="info()">info</button>
+  <button class="btn" (click)="info()">constructorCount += 1</button>
 </div>
