--- a/src/app/components/signaltest/signaltest.component.html
+++ b/src/app/components/signaltest/signaltest.component.html
@@ -14,7 +14,7 @@
     <span class="descriptionText">multiplied:</span>
     <span class="number">{{ multi() }}</span>
   </div>
-  <button class="btn" (click)="calculate()" (mouseover)="calculateOnHover()">calculate</button>
+  <button class="btn" (click)="calculate()" (mouseenter)="setIsHovered()" (mouseleave)="unsetIsHovered()">calculate</button>
   <button class="btn" (click)="reset()">reset</button>
   <button class="btn" (click)="info()">constructorCount += 1</button>
 </div>
